--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                 </div>
             </div>
         </section>
-         <!-- Deuxième section -->
+        <!-- Deuxième section -->
         <section>
-          <!-- Titre et cartes de fonctionnement -->
+            <!-- Titre et cartes de fonctionnement -->
             <div class="functioning__cards">
                 <div class="functioning__title">
                     <h1>Fonctionnement</h1>
@@ -76,27 +76,32 @@
             <!-- Cartes de présentation des restaurants -->
             <div class="restaurants__cards">
                 <h1 id="restaurants">Restaurants</h1>
+                <a href="./menus/lapalettedugout.html">
+                    <div class="card">
+                        <div class="btn__new">
+                            <button>Nouveau</button>
+                        </div>
+                        <img src="./images/restaurants/la-palette-du-gout.jpg"
+                            alt="Image représentant une assiète de nourriture sur une table " />
+                        <div class="card__content">
+                            <div class="card__txt">
+                                <h2>La palette du goût</h2>
+                                <p>Ménilmontant</p>
+                            </div>
+                            <div class="card__fav">
+                                <i class="fa-regular fa-heart"></i>
+                                <i class="fa-solid fa-heart"></i>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+                <a href="./menus/lanoteenchantee.html">
                 <div class="card">
                     <div class="btn__new">
                         <button>Nouveau</button>
                     </div>
-                    <img src="./images/restaurants/la-palette-du-gout.jpg" alt="Image représentant une assiète de nourriture sur une table " />
-                    <div class="card__content">
-                        <div class="card__txt">
-                            <h2>La palette du goût</h2>
-                            <p>Ménilmontant</p>
-                        </div>
-                        <div class="card__fav">
-                            <i class="fa-regular fa-heart"></i>
-                            <i class="fa-solid fa-heart"></i>
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="btn__new">
-                        <button>Nouveau</button>
-                    </div>
-                    <img src="./images/restaurants/la-note-enchantee.jpg" alt="Image représentant une assiète de nourriture sur une table " />
+                    <img src="./images/restaurants/la-note-enchantee.jpg"
+                        alt="Image représentant une assiète de nourriture sur une table " />
                     <div class="card__content">
                         <div class="card__txt">
                             <h2>La note enchantée</h2>
@@ -108,8 +113,11 @@
                         </div>
                     </div>
                 </div>
+            </a>
+            <a href="./menus/alafrançaise.html">
                 <div class="card">
-                    <img src="./images/restaurants/a-la-francaise.jpg" alt="Image représentant une assiète de nourriture sur une table " />
+                    <img src="./images/restaurants/a-la-francaise.jpg"
+                        alt="Image représentant une assiète de nourriture sur une table " />
                     <div class="card__content">
                         <div class="card__txt">
                             <h2>À la française</h2>
@@ -121,8 +129,11 @@
                         </div>
                     </div>
                 </div>
+            </a>
+            <a href="./menus/ledelicedessens.html">
                 <div class="card">
-                    <img src="./images/restaurants/le-delice-des-sens.jpg" alt="Image représentant une assiète de nourriture sur une table " />
+                    <img src="./images/restaurants/le-delice-des-sens.jpg"
+                        alt="Image représentant une assiète de nourriture sur une table " />
                     <div class="card__content">
                         <div class="card__txt">
                             <h2>Le délice des sens</h2>
@@ -134,8 +145,8 @@
                         </div>
                     </div>
                 </div>
-
             </div>
+        </a>
         </section>
     </main>
     <!-- Pied de page -->
@@ -155,4 +166,5 @@
     </footer>
 
 </body>
+
 </html>
