Correction et passage en grid

--- a/index.html
+++ b/index.html
@@ -53,9 +53,7 @@
         <section>
             <!-- Titre et cartes de fonctionnement -->
             <div class="functioning__cards">
-                <div class="functioning__title">
-                    <h1>Fonctionnement</h1>
-                </div>
+                <h1>Fonctionnement</h1>
                 <!-- Cartes décrivant le fonctionnement -->
                 <div class="card">
                     <div class="number">1</div>
@@ -74,79 +72,84 @@
         <!-- Troisième section -->
         <section>
             <!-- Cartes de présentation des restaurants -->
+
+
             <div class="restaurants__cards">
                 <h1 id="restaurants">Restaurants</h1>
-                <a href="./menus/lapalettedugout.html">
-                    <div class="card">
-                        <div class="btn__new">
-                            <button>Nouveau</button>
-                        </div>
-                        <img src="./images/restaurants/la-palette-du-gout.jpg"
-                            alt="Image représentant une assiète de nourriture sur une table " />
-                        <div class="card__content">
-                            <div class="card__txt">
-                                <h2>La palette du goût</h2>
-                                <p>Ménilmontant</p>
+                <div class="card__grid">
+                    <a href="./menus/lapalettedugout.html">
+                        <div class="card" id="palette">
+                            <div class="btn__new">
+                                <button>Nouveau</button>
                             </div>
-                            <div class="card__fav">
-                                <i class="fa-regular fa-heart"></i>
-                                <i class="fa-solid fa-heart"></i>
+                            <img src="./images/restaurants/la-palette-du-gout.jpg"
+                                alt="Image représentant une assiète de nourriture sur une table " />
+                            <div class="card__content">
+                                <div class="card__txt">
+                                    <h2>La palette du goût</h2>
+                                    <p>Ménilmontant</p>
+                                </div>
+                                <div class="card__fav">
+                                    <i class="fa-regular fa-heart"></i>
+                                    <i class="fa-solid fa-heart"></i>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </a>
-                <a href="./menus/lanoteenchantee.html">
-                <div class="card">
-                    <div class="btn__new">
-                        <button>Nouveau</button>
-                    </div>
-                    <img src="./images/restaurants/la-note-enchantee.jpg"
-                        alt="Image représentant une assiète de nourriture sur une table " />
-                    <div class="card__content">
-                        <div class="card__txt">
-                            <h2>La note enchantée</h2>
-                            <p>Charonne</p>
+                    </a>
+                    <a href="./menus/lanoteenchantee.html">
+                        <div class="card" id="enchantee">
+                            <div class="btn__new">
+                                <button>Nouveau</button>
+                            </div>
+                            <img src="./images/restaurants/la-note-enchantee.jpg"
+                                alt="Image représentant une assiète de nourriture sur une table " />
+                            <div class="card__content">
+                                <div class="card__txt">
+                                    <h2>La note enchantée</h2>
+                                    <p>Charonne</p>
+                                </div>
+                                <div class="card__fav">
+                                    <i class="fa-regular fa-heart"></i>
+                                    <i class="fa-solid fa-heart"></i>
+                                </div>
+                            </div>
                         </div>
-                        <div class="card__fav">
-                            <i class="fa-regular fa-heart"></i>
-                            <i class="fa-solid fa-heart"></i>
+
+                    </a>
+                    <a href="./menus/alafrançaise.html">
+                        <div class="card" id="francaise">
+                            <img src="./images/restaurants/a-la-francaise.jpg"
+                                alt="Image représentant une assiète de nourriture sur une table " />
+                            <div class="card__content">
+                                <div class="card__txt">
+                                    <h2>À la française</h2>
+                                    <p>Cité Rouge</p>
+                                </div>
+                                <div class="card__fav">
+                                    <i class="fa-regular fa-heart"></i>
+                                    <i class="fa-solid fa-heart"></i>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                </div>
-            </a>
-            <a href="./menus/alafrançaise.html">
-                <div class="card">
-                    <img src="./images/restaurants/a-la-francaise.jpg"
-                        alt="Image représentant une assiète de nourriture sur une table " />
-                    <div class="card__content">
-                        <div class="card__txt">
-                            <h2>À la française</h2>
-                            <p>Cité Rouge</p>
+                    </a>
+                    <a href="./menus/ledelicedessens.html">
+                        <div class="card" id="sens">
+                            <img src="./images/restaurants/le-delice-des-sens.jpg"
+                                alt="Image représentant une assiète de nourriture sur une table " />
+                            <div class="card__content">
+                                <div class="card__txt">
+                                    <h2>Le délice des sens</h2>
+                                    <p>Folie-Méricourt</p>
+                                </div>
+                                <div class="card__fav">
+                                    <i class="fa-regular fa-heart"></i>
+                                    <i class="fa-solid fa-heart"></i>
+                                </div>
+                            </div>
                         </div>
-                        <div class="card__fav">
-                            <i class="fa-regular fa-heart"></i>
-                            <i class="fa-solid fa-heart"></i>
-                        </div>
-                    </div>
-                </div>
-            </a>
-            <a href="./menus/ledelicedessens.html">
-                <div class="card">
-                    <img src="./images/restaurants/le-delice-des-sens.jpg"
-                        alt="Image représentant une assiète de nourriture sur une table " />
-                    <div class="card__content">
-                        <div class="card__txt">
-                            <h2>Le délice des sens</h2>
-                            <p>Folie-Méricourt</p>
-                        </div>
-                        <div class="card__fav">
-                            <i class="fa-regular fa-heart"></i>
-                            <i class="fa-solid fa-heart"></i>
-                        </div>
-                    </div>
                 </div>
             </div>
-        </a>
+            </a>
         </section>
     </main>
     <!-- Pied de page -->
