Correction suite au mentoratÃ

--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
         <!-- Deuxième section -->
         <section>
             <!-- Titre et cartes de fonctionnement -->
-            <div class="functioning__cards">
+            <div class="functioning__txt">
                 <h1>Fonctionnement</h1>
+            </div>
+            <div class="functioning__cards">
                 <!-- Cartes décrivant le fonctionnement -->
                 <div class="card">
                     <div class="number">1</div>
@@ -75,7 +77,9 @@
 
 
             <div class="restaurants__cards">
-                <h1 id="restaurants">Restaurants</h1>
+                <div class="restaurant">
+                    <h1>Restaurants</h1>
+                </div>
                 <div class="card__grid">
                     <a href="./menus/lapalettedugout.html">
                         <div class="card" id="palette">
