--- a/menus/ledelicedessens.html
+++ b/menus/ledelicedessens.html
@@ -17,9 +17,11 @@
 
 <body>
     <header>
+        <a href="../index.html">
         <div class="logo">
             <i class="fa-solid fa-arrow-left"></i> <img src="../images/logo/ohmyfood@2x.svg" alt="Logo ohmyfood" />
         </div>
+        </a>
     </header>
     <div class="menu__image">
         <img src="../images/restaurants/le-delice-des-sens.jpg"
