--- a/menus/alafrançaise.html
+++ b/menus/alafrançaise.html
@@ -183,7 +183,7 @@
                 </div>
                 <div class="btn">
                     <button>
-                        <span class="Commander">Commander</span>
+                        <span id="order">Commander</span>
                     </button>
                 </div>
             </section>
