--- a/menus/alafrançaise.html
+++ b/menus/alafrançaise.html
@@ -17,9 +17,11 @@
 
 <body>
     <header>
+        <a href="../index.html">
         <div class="logo">
             <i class="fa-solid fa-arrow-left"></i> <img src="../images/logo/ohmyfood@2x.svg" alt="Logo ohmyfood" />
         </div>
+    </a>
     </header>
     <div class="menu__image">
         <img src="../images/restaurants/a-la-francaise.jpg"
@@ -181,7 +183,7 @@
                 </div>
                 <div class="btn">
                     <button>
-                        <span class="Commander">Commander</span>
+                        <span class="order">Commander</span>
                     </button>
                 </div>
             </section>
