--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
         </section>
         <!-- Deuxième section -->
-        <section>
+        <section id="functioning">
             <!-- Titre et cartes de fonctionnement -->
             <div class="functioning__txt">
                 <h1>Fonctionnement</h1>
@@ -72,7 +72,7 @@
             </div>
         </section>
         <!-- Troisième section -->
-        <section>
+        <section id="restaurants">
             <!-- Cartes de présentation des restaurants -->
 
 
