--- a/menus/alafrançaise.html
+++ b/menus/alafrançaise.html
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <a href="../index.html">
+        <a href="/">
         <div class="logo">
             <i class="fa-solid fa-arrow-left"></i> <img src="../images/logo/ohmyfood@2x.svg" alt="Logo ohmyfood" />
         </div>
