Refactor: Change 'new' button to 'p new', and update associated CSS style

--- a/index.html
+++ b/index.html
@@ -74,17 +74,15 @@
         <!-- Troisième section -->
         <section id="restaurants">
             <!-- Cartes de présentation des restaurants -->
-
-
             <div class="restaurants__cards">
                 <div class="restaurant">
                     <h1>Restaurants</h1>
                 </div>
                 <div class="card__grid">
-                    <a href="./menus/lapalettedugout.html">
+                     <a href="./menus/lapalettedugout.html">
                         <div class="card" id="palette">
                             <div class="btn__new">
-                                <button>Nouveau</button>
+                                <p>Nouveau</p>
                             </div>
                             <img src="./images/restaurants/la-palette-du-gout.jpg"
                                 alt="Image représentant une assiète de nourriture sur une table " />
@@ -103,7 +101,7 @@
                     <a href="./menus/lanoteenchantee.html">
                         <div class="card" id="enchantee">
                             <div class="btn__new">
-                                <button>Nouveau</button>
+                                <p>Nouveau</p>
                             </div>
                             <img src="./images/restaurants/la-note-enchantee.jpg"
                                 alt="Image représentant une assiète de nourriture sur une table " />
@@ -118,7 +116,6 @@
                                 </div>
                             </div>
                         </div>
-
                     </a>
                     <a href="./menus/alafrançaise.html">
                         <div class="card" id="francaise">
@@ -151,9 +148,9 @@
                                 </div>
                             </div>
                         </div>
+                    </a>
                 </div>
             </div>
-            </a>
         </section>
     </main>
     <!-- Pied de page -->
