--- a/menus/alafrançaise.html
+++ b/menus/alafrançaise.html
@@ -18,14 +18,17 @@
 <body>
     <header>
         <a href="/">
-        <div class="logo">
-            <i class="fa-solid fa-arrow-left"></i> <img src="../images/logo/ohmyfood@2x.svg" alt="Logo ohmyfood" />
-        </div>
-    </a>
+            <div class="logo">
+                <i class="fa-solid fa-arrow-left"></i> <img src="../images/logo/ohmyfood@2x.svg" alt="Logo ohmyfood" />
+            </div>
+        </a>
     </header>
     <div class="menu__image">
         <img src="../images/restaurants/a-la-francaise.jpg"
             alt="Image représentant une assiète de nourriture sur une table " />
+    </div>
+    <div class="loader-container">
+        <div class="loader"></div>
     </div>
     <div class="menu__part">
         <div class="menu">
